@@ -6,6 +6,10 @@ Port by euphory
 
 Support the official release! Check out *EXAPUNKS*, an incredible open-ended programming puzzle game and good introduction to Zachtronics's catalog; *Last Call BBS*, a collection best described as several outstanding games rolled into one; or check out the NES port this is most closely based on on itch.io.
 
+## Installation
+
+Using any linking program (TILP, TI Connect CE, etc), import HACKMTCH.8xg onto your calculator. This program also relies on the standard C library available [here](https://github.com/CE-Programming/libraries/releases). If launching the program displays the error "need libload", try reinstalling that library.
+
 ## How to Play
 
 *HACK\*MATCH* is a match-4 game in the vein of Candy Crush, but (hopefully!) better. Move matching files into groups of 4 to remove them and score points. Files will continue to be added from the top; if they reach the bottom, it's game over!
@@ -26,8 +30,8 @@ Format: auto-extracting 8xg
 Program Type: ASM
 
 Size and Variable Usage:
-- RAM: 7360 B
-    - HACKMTCH: 7340 B
+- RAM: 7705 B
+    - HACKMTCH: 7685 B
     - HKMCHDAT: 20 B
 - ARC: 54117 B
     - HKMCHGFX: 54117 B
